--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "web-perf",
+  "name": "hello-next",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start"
   },
+  "license": "ISC",
   "dependencies": {
-    "next": "^9.3.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "isomorphic-unfetch": "^3.0.0",
+    "next": "latest",
+    "now": "^17.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0"
   }
 }
