--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "latest",
     "now": "^17.1.1",
