--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "^2.7.0"
+  },
+  "devDependencies": {
+    "babel-jest": "^25.2.6",
+    "jest": "^25.2.6"
   }
 }
